--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!--     <h2 style="font-family:poppins; line-height: 0.7; font-size:28px;">HI, I'M ANNE <i>!</i></h2> -->
 <!--     <p style="font-size:20px; font-family:poppins; line-height:0.7;">HELLO, I'M ANNE :) <p style="font-size:17px;"> she/her </p> </p> -->
    <h2 style="font-family:poppins; line-height: 0.4; font-size:30px;">HI, I'M <span class="hover-title">ANNE</span> <i>!</i> <span style="color:#c4c2c2; font-size:20px; font-family:Amethysta;"> (sheher) </span></h2>
-   <div class="hover-image"><img src ="images/me.png"></div>
+   <div class="hover-image"><img data-src="images/me.png" src ="images/me.png"></div>
     <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b class="under">high school senior</b> graduating in december '24 🏳️‍🌈♿. i'm a non traditional student from india hoping to pursue a criminal justice major in college to eventually establish a career in cybercriminal law.
       <!-- <br><br> -->
     i've only recently started getting into tech and hackclub's #arcade has been my main motivator throughout the summer by rewarding me for staring at a screen the whole day (hah! take that, mom). 
