--- a/index.html
+++ b/index.html
@@ -43,15 +43,18 @@
     <span style="color:#c4c2c2; font-size:20px; font-family:Amethysta;"> (sheher) </span></h2>
    
 
-    <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b class="under">high school senior</b> graduating in december '24 🏳️‍🌈♿. i'm a non traditional student from india hoping to pursue a criminal justice major in college to eventually establish a career in cybercriminal law.
+    <p style="font-family:poppins;font-size:16px; line-height: 0.9"> i'm a <b class="under">high school senior</b> graduating in december '24 🏳️‍🌈♿. i'm a non traditional student from india hoping to pursue a <mark style="background-color: #F7B5CA;
+  color: black;">criminal justice major</mark> in college to eventually establish a career in cybercriminal law.
       <!-- <br><br> -->
     i've only recently started getting into tech and hackclub's #arcade has been my main motivator throughout the summer by rewarding me for staring at a screen the whole day (hah! take that, mom). 
       <br><br>
-      i'm <b class="under"> currently using</b> figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i've always enjoyed drawing and painting. i build dashboards and cute notes using notion and am hoping to win an ipad so i can start using goodnotes for cuter handwritten digital notes :)
+      i'm <b class="under"> currently using</b> figma, procreate, ibispaint, canva, blender and adobe illustrator and i'm pretty much a beginner even though i've always enjoyed drawing and painting. i build dashboards and cute notes using notion and am hoping to <mark style="background-color: #F7B5CA;
+  color: black;">win an ipad</mark> so i can start using goodnotes for cuter handwritten digital notes :)
       <br> 
       <br>
       i'm <b class="under">currently working on</b> my hack club #arcade scrapbook projects (for onboard, fraps and boba drops) and keeping up my #100daysofcode streak while practicing problems through online courses and code challenges. i'm interested in building my portfolio on a holistic level so i'm also working on a few personal projects that are not tech related as well. 
-      these include my music ventures since i've been trying to get into music production (using ableton) and am currently experimenting with visual synth and different styles to try to figure out what suits "me" (aka my brand, i guess).
+      these include my music ventures since i've been trying to get into music production (using ableton) and am currently <mark style="background-color: #F7B5CA;
+  color: black;">experimenting with visual synth and different styles</mark> to try to figure out what suits "me" (aka my brand, i guess).
       <br><br>
       i'm <b class="under"> currently learning </b> html, css, and vanilla javascript, the basics of python, introductory cybersecurity concepts and introductory electronics with printed circuit boards and circuit simulations. i've recently transitioned to linux and am working my way around it while reading up on data privacy and cyberspace law.
       <br><br>
